--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,5 @@
 @import url('./vendor/fonts/fonts.css');
 
 @import url('./blocks/page/page.css');
+@import url('./blocks/nav/nav.css');
+@import url('./blocks/nav/_light/nav_light.css');
