--- a/src/blocks/nav/__list/_open/nav__list_open.css
+++ b/src/blocks/nav/__list/_open/nav__list_open.css
@@ -6,3 +6,10 @@
     top: 100%;
     transform: scale(1);
 }
+
+@media screen and (min-width: 650px) {
+    .nav__list_open {
+        padding: 0;
+        margin: 0;
+    }   
+}
