--- a/src/blocks/nav/__button/nav__button.css
+++ b/src/blocks/nav/__button/nav__button.css
@@ -10,3 +10,9 @@
     cursor: pointer;
     outline: 0;
 }
+
+@media screen and (min-width: 650px) {
+    .nav__button {
+        display: none;
+    }   
+}
