--- a/src/blocks/nav/__link/nav__link.css
+++ b/src/blocks/nav/__link/nav__link.css
@@ -5,3 +5,10 @@
     letter-spacing: -0.04em;
     margin: 0 20px 0 auto;
 }
+
+@media screen and (min-width: 650px) {
+    .nav__link {
+        margin: 0;
+        order: 1;
+    }   
+}
