--- a/src/blocks/nav/__list/nav__list.css
+++ b/src/blocks/nav/__list/nav__list.css
@@ -29,3 +29,16 @@
     opacity: .6;
     cursor: pointer;
 }
+
+@media screen and (min-width: 650px) {
+    .nav__list {
+        flex-direction: row;
+        column-gap: 14px;
+        width: auto;
+        max-height: 100%;
+        opacity: 1;
+        transition: all 0s;
+        transform: scale(1);
+        position: relative;
+    }   
+}
