--- a/src/blocks/nav/nav.css
+++ b/src/blocks/nav/nav.css
@@ -6,22 +6,33 @@
 @import url('./__list/_open/nav__list_open.css');
 
 .nav {
-    --color: url('../../images/ham-icon.svg');
     --color-close: url('../../images/cross-icon.svg');
-    position: fixed;
-    top: 0;
-    left: 50%;
-    display: flex;
-    flex-wrap: wrap;
+    --color: url('../../images/ham-icon.svg');
+    align-items: center;
     background-color: #393939;
-    color: white;
     border-radius: 6px;
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.04);
-    width: 280px;
-    transform: translateX(-50%);
-    margin-top: 12px;
-    padding: 0 12px;
-    align-items: center;
-    min-height: 48px;
     box-sizing: border-box;
+    color: white;
+    display: flex;
+    flex-wrap: wrap;
+    left: 50%;
+    margin: 12px 0 0;
+    min-height: 48px;
+    padding: 0 12px;
+    position: fixed;
+    top: 0;
+    transform: translateX(-50%);
+    min-width: 280px;
+    width: 90%;
+    z-index: 1;
+}
+
+@media screen and (min-width: 650px) {
+    .nav {
+        max-width: 708px;
+        padding: 0 20px;
+        flex-wrap: nowrap;
+        justify-content: space-between;
+    }
 }
