--- a/src/blocks/nav/__button/_cross/nav__button_cross.css
+++ b/src/blocks/nav/__button/_cross/nav__button_cross.css
@@ -1,3 +1,6 @@
 .nav__button_cross {
-    background-image: var(--color-close);
+    mask-image: url('../../../../images/cross-icon.svg');
+    -webkit-mask-image: url('../../../../images/cross-icon.svg');
+    mask-repeat: no-repeat;
+    -webkit-mask-repeat: no-repeat;
 }
