--- a/src/blocks/nav/nav.css
+++ b/src/blocks/nav/nav.css
@@ -6,14 +6,13 @@
 @import url('./__list/_open/nav__list_open.css');
 
 .nav {
-    --color-close: url('../../images/cross-icon.svg');
-    --color: url('../../images/ham-icon.svg');
+    --color: white;
     align-items: center;
     background-color: #393939;
     border-radius: 6px;
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.04);
     box-sizing: border-box;
-    color: white;
+    color: var(--color);
     display: flex;
     flex-wrap: wrap;
     left: 50%;
