--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,5 @@
 @import url('./blocks/page/page.css');
 @import url('./blocks/nav/nav.css');
 @import url('./blocks/nav/_light/nav_light.css');
+
+@import url('./blocks/banner/banner.css');
