--- a/src/blocks/banner/__subtitle/banner__subtitile.css
+++ b/src/blocks/banner/__subtitle/banner__subtitile.css
@@ -3,6 +3,7 @@
     line-height: 20px;
     width: 320px;
     height: 40px;
-    font-weight: 500;
+    font-weight: 400;
     color: #A0A0A0;
+    margin: 0 auto 92px;
 }
