--- a/src/blocks/banner/banner.css
+++ b/src/blocks/banner/banner.css
@@ -3,11 +3,15 @@
 @import url('./__subtitle/banner__subtitile.css');
 @import url('./__video-button/banner__video-button.css');
 @import url('./__learn-button/banner__learn-button.css');
+@import url('./__left-left-line/banner__left-left-line.css');
+@import url('./__left-right-line/banner__left-right-line.css');
+@import url('./__left-top-line/banner__left-top-line.css');
 
 .banner {
+    position: relative;
     background-color: #242424;
-    min-width: 1260px;
-    min-height: 634px;
-    margin: 10px;
+    width: 1260px;
+    height: 634px;
+    margin: 10px auto;
     border-radius: 14px;
 }
