--- a/src/blocks/robot/__container-image/robot__container-image.css
+++ b/src/blocks/robot/__container-image/robot__container-image.css
@@ -4,4 +4,18 @@
     padding-bottom: 36px;
     box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.04);
     border-radius: 6px;
+    width: 100%;
+    margin: auto;
+    max-width: 575px;
+}
+
+@media screen and (min-width: 600px) {
+    .robot__container-image {
+        display: grid;
+        grid-template-columns: 42% 1fr;
+        align-items: center;
+        column-gap: 30px;
+        min-height: 324px;
+        padding: 0;
+    }
 }
