--- a/src/blocks/robot/__image/robot__image.css
+++ b/src/blocks/robot/__image/robot__image.css
@@ -6,3 +6,10 @@
     object-fit: cover;
     object-position: center;
 }
+
+@media screen and (min-width: 600px) {
+    .robot__image {
+        justify-self: end;
+        margin: 0;
+    }
+}
