--- a/src/blocks/robot/__wrapper-info/robot__wrapper-info.css
+++ b/src/blocks/robot/__wrapper-info/robot__wrapper-info.css
@@ -16,7 +16,7 @@
     font-size: 10px;
     line-height: 15px;
     color: #525252;
-    font-weight: 600;
+    font-weight: 700;
 }
 
 .robot__wrapper-info span {
@@ -37,3 +37,15 @@
     margin: 32px auto 0;
 }
 
+@media screen and (min-width: 600px) {
+    .robot__wrapper-info {
+        text-align: left;
+    }
+    .robot__wrapper-info h2 {
+        margin-bottom: 22px;
+    }
+    .robot__wrapper-info button {
+        display: inline-block;
+        margin-top: 56px;
+    }
+}
