--- a/src/blocks/robot/__image/robot__image.css
+++ b/src/blocks/robot/__image/robot__image.css
@@ -5,6 +5,7 @@
     display: block;
     object-fit: cover;
     object-position: center;
+    /* box-shadow: 0px 1px 10px 1px rgb(0 0 0 / 20%); */
 }
 
 @media screen and (min-width: 600px) {
