--- a/src/blocks/nav/nav.css
+++ b/src/blocks/nav/nav.css
@@ -34,6 +34,7 @@
         flex-wrap: nowrap;
         justify-content: space-between;
         margin-top: 20px;
+        box-shadow: none;
     }
 }
 
