--- a/src/blocks/robot/__image/robot__image.css
+++ b/src/blocks/robot/__image/robot__image.css
@@ -3,9 +3,8 @@
     height: 160px;
     margin: 30px auto 20px;
     display: block;
-    object-fit: cover;
+    object-fit: contain;
     object-position: center;
-    /* box-shadow: 0px 1px 10px 1px rgb(0 0 0 / 20%); */
 }
 
 @media screen and (min-width: 600px) {
