--- a/src/blocks/robot/__container-image/robot__container-image.css
+++ b/src/blocks/robot/__container-image/robot__container-image.css
@@ -19,3 +19,9 @@
         padding: 0;
     }
 }
+
+@media screen and (min-width: 1024px) {
+    .robot__container-image {
+        margin: 0;
+    }
+}
