--- a/src/blocks/robot/__container/robot__container.css
+++ b/src/blocks/robot/__container/robot__container.css
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: column;
     row-gap: 50px;
+    width: 92.5%;
+    margin: auto;
 }
 
 @media screen and (min-width: 600px) {
@@ -16,6 +18,7 @@
         max-width: 1060px;
         height: 324px;
         margin: auto;
-        column-gap: 65px;
+        justify-content: space-between;
+        column-gap: 25px;
     }
 }
