--- a/src/blocks/banner/__learn-button/banner__learn-button.css
+++ b/src/blocks/banner/__learn-button/banner__learn-button.css
@@ -6,3 +6,9 @@
     border-radius: 6px;
     border: none;
 }
+
+.banner__learn-button:hover {
+    background-color: transparent;
+    color: #A0A0A0;
+    border: 1px solid #717171;
+}
