--- a/src/blocks/banner/__left-left-line/banner__left-left-line.css
+++ b/src/blocks/banner/__left-left-line/banner__left-left-line.css
@@ -1,9 +1,11 @@
 .banner__left-left-line {
-    position: absolute;
+    /* position: absolute; */
     background-image: url('../../../images/left-left-line.svg');
     background-repeat: no-repeat;
-    top: 344px;
-    left: 150px;
+    /* top: 344px;
+    left: 150px; */
     height: 45px;
     width: 181px;
+    margin-top: 344px;
+    margin-left: 150px;
 }
