--- a/src/blocks/nav/nav.css
+++ b/src/blocks/nav/nav.css
@@ -12,37 +12,34 @@
     border-radius: 6px;
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.04);
     box-sizing: border-box;
-    color: var(--color);
+    color: white;
     display: flex;
     flex-wrap: wrap;
     left: 50%;
-    margin: 12px 0 0;
+    margin: 22px 0 0;
     min-height: 48px;
     padding: 0 12px;
     position: fixed;
     top: 0;
     transform: translateX(-50%);
     min-width: 280px;
-    width: 90%;
+    width: 87.5%;
     z-index: 1;
 }
 
 @media screen and (min-width: 725px) {
     .nav {
-        max-width: 708px;
+        width: 92.1875%;
         padding: 0 20px;
         flex-wrap: nowrap;
         justify-content: space-between;
-        margin-top: 20px;
+        margin-top: 30px;
     }
 }
 
 @media screen and (min-width: 1024px) {
     .nav {
         max-width: 1060px;
-        padding: 0 20px;
-        flex-wrap: nowrap;
-        justify-content: space-between;
-        margin-top: 20px;
+        width: 82.8125%;
     }
 }
