--- a/src/blocks/nav/__list/nav__list.css
+++ b/src/blocks/nav/__list/nav__list.css
@@ -2,6 +2,7 @@
     align-items: center;
     background-color: inherit;
     border-radius: 6px;
+    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.04);
     display: flex;
     flex-direction: column;
     font-size: 12px;
