--- a/src/blocks/nav/_light/nav_light.css
+++ b/src/blocks/nav/_light/nav_light.css
@@ -3,3 +3,9 @@
     background-color: #efefef;
     color: black;
 }
+
+@media screen and (min-width: 725px) {
+    .nav_light {
+        box-shadow: none;
+    }
+}
