--- a/src/blocks/robot/__container-image/robot__container-image.css
+++ b/src/blocks/robot/__container-image/robot__container-image.css
@@ -1,20 +1,17 @@
 .robot__container-image {
     position: relative;
     background-color: white;
-    padding-bottom: 36px;
     box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.04);
     border-radius: 6px;
     width: 100%;
     margin: auto;
-    max-width: 575px;
 }
 
 @media screen and (min-width: 600px) {
     .robot__container-image {
         display: grid;
-        grid-template-columns: 42% 1fr;
-        align-items: center;
-        column-gap: 30px;
+        grid-template-columns: calc(240/575*100%) 1fr;
+        column-gap: 35px;
         min-height: 324px;
         padding: 0;
     }
@@ -23,5 +20,7 @@
 @media screen and (min-width: 1024px) {
     .robot__container-image {
         margin: 0;
+        max-width: 575px;
+        min-width: 505px;
     }
 }
