--- a/src/blocks/robot/robot.css
+++ b/src/blocks/robot/robot.css
@@ -11,12 +11,13 @@
     margin: 8px 0;
     border-radius: 14px;
     box-sizing: border-box;
-    padding: 10px 0 80px;
+    padding: 10px 0px 80px;
 }
 
 @media screen and (min-width: 600px) {
     .robot {
         margin: 10px 0;
         padding: 110px 0;
+        min-height: 986px;
     }
 }
