--- a/src/blocks/banner/__video-button/banner__video-button.css
+++ b/src/blocks/banner/__video-button/banner__video-button.css
@@ -6,9 +6,13 @@
     background-color: transparent;
     border-radius: 6px;
     margin-right: 10px;
+    cursor: pointer;
+    transition: all .3s;
+    outline: none;
+    padding: 0;
 }
 
-.banner__video-button:hover {
+/* .banner__video-button:hover {
     background-color: rgba(250, 168, 5, .5);
     color: white;
-}
+} */
