--- a/src/blocks/banner/__column-1/banner__column-1.css
+++ b/src/blocks/banner/__column-1/banner__column-1.css
@@ -1,9 +1,115 @@
 .banner__column-1 {
-    display: flex;
+  position: relative;
+  perspective: 1000px;
+  transform-style: preserve-3d;
+}
+.banner__column-1 :first-child {
+  position: absolute;
+  width: 4px;
+  height: 184px;
+  background: white;
+  top: 310px;
+  right: 70px;
 }
 
-@media screen and (min-width: 725px) {
+.banner__column-1 :first-child::before {
+  content: '';
+  position: absolute;
+  display: block;
+  width: 40px;
+  height: 40px;
+  background: #FAA805;
+  bottom: 10px;
+  left: 50%;
+  transform: translateX(-50%) rotateX(50deg);
+  animation: anim-one 2s linear infinite;
+}
+
+@keyframes anim-one {
+  50% {
+    transform: translateX(-50%) rotateX(140deg) rotateZ(180deg);
+    bottom: 80%;
+  }
+  100% {
+    transform: translateX(-50%) rotateX(40deg) rotateZ(360deg);
+    bottom: 10px;
+  }
+}
+
+.banner__column-1 :nth-child(2) {
+  position: absolute;
+  width: 181px;
+  height: 45px;
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg width='183' height='47' viewBox='0 0 183 47' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M0 1.99999L151 2C167.569 2 181 15.4315 181 32L181 47' stroke='white' stroke-width='4'/%3E%3C/svg%3E");
+  background-position: center;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  top: 344px;
+  right: 90px;
+}
+
+.banner__column-1 :nth-child(2)::before {
+  content: '';
+  display: block;
+  position: absolute;
+  width: 26px;
+  height: 26px;
+  background-color: #FAA805;
+  left: -10px;
+  top: -11px;
+  animation: anim-two 2s linear infinite alternate-reverse;
+}
+
+@keyframes anim-two {
+  50% {
+    transform: rotateY(140deg) rotateZ(360deg);
+  }
+  75% {
+    transform: rotateY(60deg) rotateZ(720deg);
+    top: -11px;
+    left: 80%;
+  }
+  100% {
+    transform: rotateX(-90deg) rotateZ(810deg);
+    left: 94%;
+    top: 50%;
+  }
+}
+
+.banner__column-1 :nth-child(3) {
+  position: absolute;
+  width: 45px;
+  height: 180px;
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg width='47' height='182' viewBox='0 0 47 182' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M45 0L45 150C45 166.569 31.5685 180 15 180L1.7345e-05 180' stroke='white' stroke-width='4'/%3E%3C/svg%3E");
+  background-position: center;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  top: 140px;
+  right: 89px;
+}
+
+.banner__column-1 :nth-child(3)::before {
+  content: '';
+  display: block;
+  position: absolute;
+  width: 32px;
+  height: 32px;
+  background-color: #FAA805;
+  left: 27px;
+  top: 10%;
+  transform: rotateX(45deg);
+  animation: anim-three 2s linear infinite alternate;
+}
+
+@keyframes anim-three {
+  100% {
+    transform: rotateX(45deg) rotateZ(360deg);
+    top: 75%;
+  }
+}
+
+/* @media screen and (min-width: 725px) {
     .banner__column-1 {
       display: none;
     }
-  }
+} */
