--- a/src/blocks/banner/banner.css
+++ b/src/blocks/banner/banner.css
@@ -1,3 +1,4 @@
+@import url('./__main/banner__main.css');
 @import url('./__title/banner__title.css');
 /* @import url('./__title-img/banner__title-img.css'); */
 @import url('./__orange-title-block/banner__orange-title-block.css');
@@ -20,16 +21,18 @@
 @import url('./__right-left-square/banner__right-left-square.css');
 @import url('./__button-container/banner__button-container.css');
 @import url('./__column-2/banner__column-2.css');
+@import url('./__cubes/banner__cubes.css');
+@import url('./__column-1/banner__column-1.css');
 
 .banner {
     position: relative;
-    max-width: 1260px;
-    max-height: 634px;
-    margin: 10px auto;
+    min-height: 634px;
+    margin: 0 auto 10px;
     background-color: #242424;
     border-radius: 14px;
     display: grid;
-    grid-template-columns: repeat(3, minmax(304px, 1fr))
+    grid-template-columns: 1fr 420px 1fr;
+    color: white;
   }
 
   @media screen and (min-width: 1024px) {
