--- a/src/blocks/banner/__column-1/banner__column-1.css
+++ b/src/blocks/banner/__column-1/banner__column-1.css
@@ -10,7 +10,7 @@
   background: white;
   top: 310px;
   right: 70px;
-  /* animation: glow 2s linear infinite alternate; */
+  animation: glow 2s linear infinite alternate;
 }
 
 .banner__column-1 :first-child::before {
