--- a/src/blocks/banner/__button-container/banner__button-container.css
+++ b/src/blocks/banner/__button-container/banner__button-container.css
@@ -2,3 +2,13 @@
     margin: 0 auto 150px;
     text-align: center;
 }
+
+@media screen and (max-width: 700px) {
+    .banner__button-container {
+        display: flex;
+        flex-direction: column;
+        row-gap: 16px;
+        align-items: center;
+        margin-bottom: 74px;
+    }
+}
