--- a/src/blocks/banner/__column-3/banner__column-3.css
+++ b/src/blocks/banner/__column-3/banner__column-3.css
@@ -156,3 +156,9 @@
         height: 16.2px;
     }
 }
+
+@media screen and (max-width: 700px) {
+    .banner__column-3 {
+       display: none;
+    }
+}
