--- a/src/blocks/banner/__subtitle/banner__subtitile.css
+++ b/src/blocks/banner/__subtitle/banner__subtitile.css
@@ -1,9 +1,18 @@
 .banner__subtitle {
     font-size: 14px;
     line-height: 20px;
-    width: 320px;
-    height: 40px;
+    max-width: 320px;
     font-weight: 400;
     color: #A0A0A0;
     margin: 0 auto 92px;
+    text-align: center;
+    box-sizing: border-box;
+}
+
+@media screen and (max-width: 700px) {
+    .banner__subtitle {
+        max-width: 280px;
+        margin-bottom: 60px;
+        padding: 0 12px;
+    }
 }
