--- a/src/blocks/banner/__title/banner__title.css
+++ b/src/blocks/banner/__title/banner__title.css
@@ -6,3 +6,11 @@
     color: white;
     text-align: center;
 }
+
+@media screen and (max-width: 700px) {
+    .banner__title {
+        font-size: 28px;
+        margin-top: 139px;
+        margin-bottom: 17px;
+    }
+}
