--- a/src/blocks/banner/__video-button/banner__video-button.css
+++ b/src/blocks/banner/__video-button/banner__video-button.css
@@ -12,7 +12,8 @@
     padding: 0;
 }
 
-/* .banner__video-button:hover {
-    background-color: rgba(250, 168, 5, .5);
-    color: white;
-} */
+@media screen and (max-width: 700px) {
+    .banner__video-button {
+        margin: 0;
+    }
+}
