--- a/src/blocks/banner/__cubes/banner__cubes.css
+++ b/src/blocks/banner/__cubes/banner__cubes.css
@@ -49,3 +49,16 @@
         border-radius: 0;
     }
 }
+
+@media screen and (max-width: 700px) {
+    .banner__cubes div {
+        width: 8.48px;
+        height: 8.48px;
+        top: 3px;
+        left: -11px;
+    }
+    .banner__cubes div::after, .banner__cubes div::before {
+        width: 5.3px;
+        height: 5.3px;
+    }
+}
