--- a/src/blocks/banner/__left-right-line/banner__left-right-line.css
+++ b/src/blocks/banner/__left-right-line/banner__left-right-line.css
@@ -1,8 +1,8 @@
 .banner__left-right-line {
     background-image: url('../../../images/left-right-line.png');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
     position: absolute;
     top: 310px;
-    left: 350px;
-    height: 184px;
-    width: 4px;
+    left: 350px;   
 }
