--- a/src/blocks/banner/__left-top-line/banner__left-top-line.css
+++ b/src/blocks/banner/__left-top-line/banner__left-top-line.css
@@ -1,10 +1,9 @@
 .banner__left-top-line {
     background-image: url('../../../images/left-top-line.png');
-    /* position: absolute; */
+    position: absolute;
+    background-size: 100% 100%;
+    top: 140px;
+    left: 286px;
     width: 45px;
     height: 180px;
-    /* top: 140px;
-    left: 286px; */
-    margin-bottom: 69px;
-    margin-left: -45px;
 }
