--- a/src/blocks/banner/__right-left-line/banner__right-left-line.css
+++ b/src/blocks/banner/__right-left-line/banner__right-left-line.css
@@ -1,5 +1,6 @@
 .banner__right-left-line {
     background-image: url('../../../images/right-left-line.png');
+    background-size: 100% 100%;
     position: absolute;
     height: 184px;
     width: 4px;
