--- a/src/blocks/banner/__right-top-line/banner__right-top-line.css
+++ b/src/blocks/banner/__right-top-line/banner__right-top-line.css
@@ -1,5 +1,6 @@
 .banner__right-top-line {
     background-image: url('../../../images/rt-line-top.svg');
+    background-size: 100% 100%;
     position: absolute;
     width: 150px;
     height: 87px;
