import issue resolce

--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,5 @@
 @import url('./blocks/button/button.css');
 @import url('./blocks/arrow/arrow.css');
 @import url('./blocks/robot/robot.css');
+
+@import url('./blocks/benefits/benefits.css');
