--- a/src/blocks/benefits/benefits.css
+++ b/src/blocks/benefits/benefits.css
@@ -1,7 +1,7 @@
 @import url('./__title/benefits__title.css');
 @import url('./__image/benefits__image.css');
 @import url('./__column-title/benefits__column-title.css');
-@import url('/__column-subtitle/benefits__column-subtitle.css');
+@import url('./__column-subtitle/benefits__column-subtitle.css');
 
 .benefits {
     height: 500px;
@@ -9,5 +9,4 @@
     background-color: #F9F9F9;
     border-radius: 14px;
     display: flex;
-    flex-direction: column;
 }
