--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,6 @@
 
 @import url('./blocks/banner/banner.css');
 
-@import url('./blocks/button/button.css');
 @import url('./blocks/arrow/arrow.css');
 @import url('./blocks/robot/robot.css');
+@import url('./blocks/gallery/gallery.css');
