--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,13 @@
 
 @import url('./blocks/page/page.css');
 @import url('./blocks/glow/glow.css');
+@import url('./blocks/arrow/arrow.css');
 
 @import url('./blocks/nav/nav.css');
 @import url('./blocks/nav/_light/nav_light.css');
 
-@import url('./blocks/banner/banner.css');
 
-@import url('./blocks/arrow/arrow.css');
+@import url('./blocks/banner/banner.css');
 @import url('./blocks/robot/robot.css');
 @import url('./blocks/gallery/gallery.css');
+@import url('./blocks/customer/customer.css');
