--- a/src/blocks/benefits/__column-title/benefits__column-title.css
+++ b/src/blocks/benefits/__column-title/benefits__column-title.css
@@ -2,4 +2,8 @@
     font-size: 16px;
     font-weight: 600;
     line-height: 19.36px;
+    width: 235px;
+    margin-top: 30px;
+    margin-bottom: 18px;
+    padding-right: 40px;
 }
