--- a/src/blocks/benefits/__title/benefits__title.css
+++ b/src/blocks/benefits/__title/benefits__title.css
@@ -2,6 +2,6 @@
     font-size: 34px;
     font-weight: 700;
     line-height: 43px;
-    margin-left: 100px;
-    margin-top: 110px;
+    margin: 0 0 70px;
+    padding-top: 110px;
 }
