--- a/src/blocks/benefits/benefits.css
+++ b/src/blocks/benefits/benefits.css
@@ -1,12 +1,16 @@
+@import url('./__container/benefits__container.css');
 @import url('./__title/benefits__title.css');
 @import url('./__image/benefits__image.css');
+@import url('./___columns/benefits__columns.css');
 @import url('./__column-title/benefits__column-title.css');
 @import url('./__column-subtitle/benefits__column-subtitle.css');
+@import url('./__image-1/benefits__images.css');
+@import url('./__image-2/benefits__image-2.css');
+@import url('./__image-3/benefits__image-3.css');
+@import url('./__image-4/benefits__image-4.css');
 
 .benefits {
-    height: 500px;
     margin: 0 auto 10px;
     background-color: #F9F9F9;
     border-radius: 14px;
-    display: flex;
 }
