--- a/src/blocks/benefits/___columns/benefits__columns.css
+++ b/src/blocks/benefits/___columns/benefits__columns.css
@@ -1,5 +1,19 @@
 .benefits__columns {
-    display: grid;
-    grid-template-columns: repeat(4, 235px);
-    grid-column-gap: 40px;
+    min-width: 304px;
+    margin: 0 auto 40px;
+}
+
+@media screen and (min-width: 700px){
+    .benefits__columns{
+        display: grid;
+        grid-template-columns: repeat(2, 235px);
+        grid-column-gap: 78px;
+    }
+}
+
+@media screen and (min-width: 1200px){
+    .benefits__columns{
+        grid-template-columns: repeat(4, 235px);
+        grid-column-gap: 40px;
+    }
 }
