--- a/src/blocks/benefits/__column-subtitle/benefits__column-subtitle.css
+++ b/src/blocks/benefits/__column-subtitle/benefits__column-subtitle.css
@@ -3,5 +3,12 @@
     font-size: 10px;
     font-weight: 400;
     line-height: 16px;
-    width: 235px;
+    width: 280px;
+    margin: 0 auto 40px;
+}
+
+@media screen and (min-width: 1000px){
+    .benefits__column-subtitle {
+        width: 235px;
+    }
 }
