--- a/src/blocks/benefits/__image/benefits__image.css
+++ b/src/blocks/benefits/__image/benefits__image.css
@@ -1,8 +1,20 @@
-.benefits__image{
+.benefits__image {
     display: flex;
     height: 52px;
     width: 52px;
-    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.04);
+    box-shadow: 0px 4px 20px rgb(0 0 0 / 4%);
     border-radius: 6px;
     background-color: white;
+    margin: 0 auto 30px;
+}
+
+@media screen and (min-width: 1000px){
+    .benefits__image{
+        display: flex;
+        height: 52px;
+        width: 52px;
+        box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.04);
+        border-radius: 6px;
+        background-color: white;
+    }
 }
