--- a/src/blocks/benefits/__column-subtitle/benefits__column-subtitle.css
+++ b/src/blocks/benefits/__column-subtitle/benefits__column-subtitle.css
@@ -1,14 +1,14 @@
 .benefits__column-subtitle {
     color: #525252;
-    font-size: 10px;
     font-weight: 400;
+    font-size: 10px;
     line-height: 16px;
-    width: 280px;
-    margin: 0 auto 40px;
+    text-align: center;
+    margin: 0;
 }
 
-@media screen and (min-width: 1000px){
+@media screen and (min-width: 650px) {
     .benefits__column-subtitle {
-        width: 235px;
+        text-align: left;
     }
 }
