--- a/src/blocks/benefits/__column-title/benefits__column-title.css
+++ b/src/blocks/benefits/__column-title/benefits__column-title.css
@@ -1,20 +1,14 @@
 .benefits__column-title {
     font-size: 16px;
     font-weight: 600;
-    line-height: 19.36px;
-    width: 235px;
-    margin: 30px auto 18px;
+    line-height: 19px;
+    margin: 0 auto 18px;
     text-align: center;
+    letter-spacing: -0.04em;
 }
 
-@media screen and(min-width: 1000px){
+@media screen and (min-width: 650px) {
     .benefits__column-title{
-        font-size: 16px;
-        font-weight: 600;
-        line-height: 19.36px;
-        width: 235px;
-        margin-top: 30px;
-        margin-bottom: 18px;
-        padding-right: 40px;
+        text-align: left;
     }
 }
