--- a/src/blocks/benefits/__image/benefits__image.css
+++ b/src/blocks/benefits/__image/benefits__image.css
@@ -1,5 +1,6 @@
 .benefits__image {
-    display: flex;
+    display: grid;
+    place-items: center;
     height: 52px;
     width: 52px;
     box-shadow: 0px 4px 20px rgb(0 0 0 / 4%);
@@ -8,13 +9,8 @@
     margin: 0 auto 30px;
 }
 
-@media screen and (min-width: 1000px){
+@media screen and (min-width: 650px){
     .benefits__image{
-        display: flex;
-        height: 52px;
-        width: 52px;
-        box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.04);
-        border-radius: 6px;
-        background-color: white;
+        margin: 0 0 30px;
     }
 }
