--- a/src/blocks/benefits/benefits.css
+++ b/src/blocks/benefits/benefits.css
@@ -1,24 +1,19 @@
-@import url('./__container/benefits__container.css');
 @import url('./__title/benefits__title.css');
 @import url('./__image/benefits__image.css');
 @import url('./___columns/benefits__columns.css');
 @import url('./__column-title/benefits__column-title.css');
 @import url('./__column-subtitle/benefits__column-subtitle.css');
-@import url('./__image-1/benefits__images.css');
-@import url('./__image-2/benefits__image-2.css');
-@import url('./__image-3/benefits__image-3.css');
-@import url('./__image-4/benefits__image-4.css');
 
 .benefits {
-    margin: 0 auto 10px;
+    margin: 0 auto 8px;
     background-color: #F9F9F9;
     border-radius: 14px;
+    padding: 50px 12px 80px;
 }
 
-@media screen and (min-width: 1000px){
+@media screen and (min-width: 650px){
     .benefits {
         margin: 0 auto 10px;
-        background-color: #F9F9F9;
-        border-radius: 14px;
+        padding: 110px 12px;
     }
 }
