--- a/src/blocks/customer/customer.css
+++ b/src/blocks/customer/customer.css
@@ -51,14 +51,8 @@
     margin: 0 auto;
     text-align: center;
     color: #525252;
-    font-weight: 600;
     font-size: 10px;
     line-height: 16px;
-    align-self: end;
-}
-
-.customer__subtitle span {
-    font-weight: 400;
 }
 
 @media screen and (min-width: 560px) {
@@ -81,6 +75,9 @@
         margin: 90px auto 0;
         max-width: 548px;
         justify-content: space-between;
+    }
+    .customer__title {
+        height: 38px;
     }
 }
 
