--- a/src/index.css
+++ b/src/index.css
@@ -16,4 +16,4 @@
 @import url('./blocks/customer/customer.css');
 @import url('./blocks/callout/callout.css');
 @import url('./blocks/popup/popup.css');
-
+@import url('./blocks/team/team.css');
