--- a/src/blocks/banner/__learn-button/banner__learn-button.css
+++ b/src/blocks/banner/__learn-button/banner__learn-button.css
@@ -9,10 +9,13 @@
     transition: all .3s;
     outline: none;
     padding: 0;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 18px;
+    text-align: center;
 }
 
-/* .banner__learn-button:hover {
-    background-color: transparent;
-    color: #A0A0A0;
-    border: 1px solid #717171;
-} */
+.banner__learn-button:hover {
+    box-shadow: 0 0 2px 3px white;
+    filter: grayscale(30%);
+}
