--- a/src/blocks/banner/__video-button/banner__video-button.css
+++ b/src/blocks/banner/__video-button/banner__video-button.css
@@ -10,6 +10,15 @@
     transition: all .3s;
     outline: none;
     padding: 0;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 18px;
+    text-align: center;
+}
+
+.banner__video-button:hover {
+    color: white;
+    box-shadow: 0 0 2px 3px white;
 }
 
 @media screen and (max-width: 700px) {
