--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,4 @@
 @import url('./blocks/callout/callout.css');
 @import url('./blocks/popup/popup.css');
 @import url('./blocks/team/team.css');
+@import url('./blocks/spinner/spinner.css');
