contacts block responsiveness

--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,5 @@
 @import url('./blocks/robot/robot.css');
 
 @import url('./blocks/benefits/benefits.css');
+
+@import url('./blocks/contacts/contacts.css');
