--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,18 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url('./vendor/normalize.css');
+@import url('./vendor/fonts/fonts.css');
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+@import url('./blocks/page/page.css');
+@import url('./blocks/glow/glow.css');
+
+@import url('./blocks/nav/nav.css');
+@import url('./blocks/nav/_light/nav_light.css');
+
+@import url('./blocks/banner/banner.css');
+
+@import url('./blocks/button/button.css');
+@import url('./blocks/arrow/arrow.css');
+@import url('./blocks/robot/robot.css');
+
+@import url('./blocks/benefits/benefits.css');
+
+@import url('./blocks/contacts/contacts.css');
