--- a/src/blocks/contacts/__title/contacts__title.css
+++ b/src/blocks/contacts/__title/contacts__title.css
@@ -1,20 +1,27 @@
 .contacts__title{
-    padding-top: 50px;
-    margin: 0 12px 40px;
-    font-weight: 700;
-    font-size: 28px;
-    line-height: 32px;
+    position: relative;
+    max-width: 420px;
+    max-height: 43px;
+    margin:50px auto auto 100px;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 34px;
+    line-height: 126%;
+    color: #000000;
 }
 
-@media screen and (min-width: 600px){
-    .contacts__title{
-        padding-top: 110px;
-        margin: 0 40px 50px;
-    }
-}
-
-@media screen and (min-width: 1185px) {
+@media screen and (max-width: 1000px) {
     .contacts__title {
-        margin-left: 100px;
+        margin: 110px auto auto 40px;        
     }
-}
+} 
+
+@media screen and (max-width: 500px) {
+    .contacts__title {
+        margin: 50px auto auto 12px; 
+        font-size: 28px;  
+        line-height: 32px;     
+    }
+} 
+
