--- a/src/blocks/contacts/__map-iframe/contacts__map-iframe.css
+++ b/src/blocks/contacts/__map-iframe/contacts__map-iframe.css
@@ -13,5 +13,10 @@
     .contacts__map-iframe{
         width: 280px;
         height: 370px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-right: -50%;
+        transform: translate(-50%, -50%);
     }
 }
