--- a/src/blocks/contacts/__container/contacts__container.css
+++ b/src/blocks/contacts/__container/contacts__container.css
@@ -1,25 +1,34 @@
 .contacts__container{
+    /* position: relative; */
+    /* width: 1260px; */
+    /* height: 650px; */
     position: relative;
-    width: 1260px;
-    height: 650px;
+    max-width: 1060px;
     margin: auto;
     display:grid;
-    grid-template-columns: auto auto;
-    grid-column-gap: 7px;
+    grid-template-columns: 420px 1fr;
+    /* grid-template-columns: auto auto; */
+    /* grid-column-gap: 7px; */
+    /* justify-content: space-between; */
+    column-gap: 50px;
 }
 
-@media screen and (max-width: 1000px) {
+ @media screen and (max-width: 1024px) {
     .contacts__container {
-        width: 748px;
+        /* width: 748px;
         height: 984px;
-        grid-template-columns: none;        
+        grid-template-columns: none;         */
+        grid-template-columns: 1fr;
+        grid-template-rows: auto 430px;
+        row-gap: 60px;
     }
 } 
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 600px) {
     .contacts__container{
-        width: 304px;
+        /* width: 304px;
         height: 814px;
-        grid-template-columns: none; 
+        grid-template-columns: none;  */
+        grid-template-rows: auto 370px;
     }
-}
+} 
