--- a/src/blocks/contacts/__map-iframe/contacts__map-iframe.css
+++ b/src/blocks/contacts/__map-iframe/contacts__map-iframe.css
@@ -1,9 +1,11 @@
 .contacts__map-iframe{
-    width:560px;
-    height:430px;
+    width:100%;
+    height:100%;
+    box-shadow: 0px 4px 40px rgba(0, 0, 0, 0.08);
+    border-radius: 6px;
 }
 
-@media screen and (max-width: 1000px) {
+/* @media screen and (max-width: 1000px) {
     .contacts__map-iframe{
         width: 668px;
     }
@@ -19,4 +21,4 @@
         margin-right: -50%;
         transform: translate(-50%, -50%);
     }
-}
+} */
