--- a/src/blocks/contacts/contacts.css
+++ b/src/blocks/contacts/contacts.css
@@ -1,11 +1,11 @@
 /* @import url("./__address/contacts__address.css"); */
 /* @import url("./__phone/contacts__phone.css"); */
 /* @import url("./__email/contacts__email.css"); */
+/* @import url("./__map/contacts__map.css"); */
 @import url("./__copyright/contacts__copyright.css");   
 @import url("./__title/contacts__title.css");
 @import url("./__container/contacts__container.css");
 @import url("./__linkedin/contacts__linkedin.css");
-@import url("./__map/contacts__map.css");
 @import url("./__map-iframe/contacts__map-iframe.css");
 @import url("./__text/contacts__text.css");
 @import url("./__text-reg/contacts__text-reg.css");
