--- a/src/blocks/banner/__column-1/banner__column-1.css
+++ b/src/blocks/banner/__column-1/banner__column-1.css
@@ -22,19 +22,28 @@
   background: #FAA805;
   bottom: 10px;
   left: 50%;
-  transform: translateX(-50%) rotateX(50deg);
+  transform: translateX(-50%) rotateY(0deg) rotateX(60deg);
+  /* transform: translateX(-50%) rotateX(50deg); */
   animation: anim-one 2s linear infinite;
 }
 
 @keyframes anim-one {
   50% {
+    transform: translateX(-50%) rotateY(180deg) rotateX(60deg);
+    /* bottom: 80%; */
+  }
+  100% {
+    transform: translateX(-50%) rotateY(360deg) rotateX(60deg);
+    /* bottom: 10px; */
+  }
+  /* 50% {
     transform: translateX(-50%) rotateX(140deg) rotateZ(180deg);
     bottom: 80%;
   }
   100% {
     transform: translateX(-50%) rotateX(40deg) rotateZ(360deg);
     bottom: 10px;
-  }
+  } */
 }
 
 .banner__column-1 :nth-child(2) {
@@ -58,7 +67,7 @@
   background-color: #FAA805;
   left: 0;
   top: -25%;
-  animation: anim-two 2s linear infinite alternate-reverse;
+  /* animation: anim-two 2s linear infinite alternate-reverse; */
 }
 
 @keyframes anim-two {
@@ -99,7 +108,7 @@
   left: 55%;
   top: 10%;
   transform: rotateX(45deg);
-  animation: anim-three 2s linear infinite alternate;
+  /* animation: anim-three 2s linear infinite alternate; */
 }
 
 @keyframes anim-three {
